tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__dart_function_with_comment.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
int add(int a, int b) {
  return a + b; // Return sum
}

# text_to_type
int add(int a, int b) {
return a + b; // Return sum
}

# text_to_display
int add(int a, int b) {↵
  return a + b; // Return sum↵
}↵
