tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__elixir_empty_line_preservation_enabled.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
def process(x) do
  y = x + 1

  z = y * 2

  z
end

# text_to_type
def process(x) do
y = x + 1
z = y * 2
z
end

# text_to_display
def process(x) do↵
  y = x + 1↵

  z = y * 2↵

  z↵
end↵
