tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__elixir_multi_clause_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
def fibonacci(0), do: 0
# Base case for 1
def fibonacci(1), do: 1
# Recursive case
def fibonacci(n) when n > 1 do
  fibonacci(n - 1) + fibonacci(n - 2)
end

# text_to_type
def fibonacci(0), do: 0
def fibonacci(1), do: 1
def fibonacci(n) when n > 1 do
fibonacci(n - 1) + fibonacci(n - 2)
end

# text_to_display
def fibonacci(0), do: 0↵
# Base case for 1
def fibonacci(1), do: 1↵
# Recursive case
def fibonacci(n) when n > 1 do↵
  fibonacci(n - 1) + fibonacci(n - 2)↵
end↵
