tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__elixir_pattern_matching_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
def process(value) do
  # Handle different input types
  case value do
    {:ok, result} -> result
    {:error, reason} -> raise reason
    _ -> nil
  end
end

# text_to_type
def process(value) do
case value do
{:ok, result} -> result
{:error, reason} -> raise reason
_ -> nil
end
end

# text_to_display
def process(value) do↵
  # Handle different input types
  case value do↵
    {:ok, result} -> result↵
    {:error, reason} -> raise reason↵
    _ -> nil↵
  end↵
end↵
