tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__erlang_empty_line_preservation_disabled.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
process(X) ->
    Y = X + 1,

    Z = Y * 2,

    Z.

# text_to_type
process(X) ->
Y = X + 1,
Z = Y * 2,
Z.

# text_to_display
process(X) ->↵
    Y = X + 1,↵

    Z = Y * 2,↵

    Z.↵
